<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="12dp"
    android:paddingBottom="12dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1."
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_title"
                android:layout_width="378dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Module Name Goes here"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_col2"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/the_learning_outcomes_were_clearly_communicated"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_col2_score"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:text="1/5"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_col3"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/the_learning_opportunities_enabled_me_to_achieve_the_learning_outcomes"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_col3_score"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:text="1/5"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_col4"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/the_relevance_of_the_module_to_my_qualification_was_clear_to_me"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_col4_score"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:text="4/5"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_col5"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/the_lecturer_responded_in_a_comprehensive_and_timely_way"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_col5_score"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:text="3/5"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_col6"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/the_technology_enhanced_teaching_and_assessment_enriched_my_learning"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_col6_score"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:text="3/5"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_col7"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/what_aspects_of_this_module_or_module_section_need_to_be_improved"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_improvement"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:text="Some lorem ipsum content here and everything"
                android:textSize="18sp" />

        </LinearLayout>

        </LinearLayout>
    </LinearLayout>
